[package]
name = "omr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfv = {path="./../bfv/bfv"}
traits = {git = "https://github.com/Janmajayamall/bfv", branch="ntt-trait"}
rand = "0.8.5"
itertools = "0.10.5"
ndarray = {version = "0.15.6", features = ["rayon"]}
rand_chacha = "0.3.1"
statrs = "0.16.0"
num-bigint-dig = {version = "0.8.2", features = ["prime"]}
num-traits = "0.2.15"
byteorder = "1.4.3"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "basic_ops"
harness = false
