[package]
name = "omr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.10.5"
ndarray = {version = "0.15.6", features = ["rayon"]}
rand_chacha = "0.3.1"
statrs = "0.16.0"
num-bigint-dig = {version = "0.8.2", features = ["prime"]}
num-traits = "0.2.15"
byteorder = "1.4.3"
rayon = "1.7.0"
prost = "0.11"
bytes = "1.4.0"
walkdir = "2.3.3"
traits = {git = "https://github.com/Janmajayamall/bfv.git", branch = "dev"}

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
bfv = {git = "https://github.com/Janmajayamall/bfv.git", branch = "dev", default-features = false, features = ["std", "serialize"]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
bfv = {git = "https://github.com/Janmajayamall/bfv.git", branch = "dev", default-features = false, features = ["hexl-ntt", "hexl", "serialize"]}
hexl-rs = {git = "https://github.com/Janmajayamall/hexl-rs.git"}

[build-dependencies]
prost-build = "0.11.9"


[features]
level = []
noise = []
precomp_pvw = []


[dev-dependencies]
criterion = "0.4"
mimalloc-rust = "0.2.1"

[[bench]]
name = "basic_ops"
harness = false

[[bench]]
name = "range_fn"
harness = false

[[bench]]
name = "pvw"
harness = false
